chore(ci): update stale workflow to ignore PRs

--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -11,6 +11,7 @@ jobs:
         with:
           any-of-issue-labels:
             "status: waiting for author's response 💬,status: needs more info 🤷‍♀️"
+          only-pr-labels: ''
           stale-issue-message: |
             This issue has been marked as stale because it has required additional
             info or a response from the author for over 7 days. When you get the
@@ -18,9 +19,8 @@ jobs:
             Otherwise, this issue will be closed in 7 days.
           close-issue-message: |
             This issue has been closed because it has received no activity for
-            14 days
+            14 days.
           stale-issue-label: 'status: stale 🍞'
-          stale-pr-label: 'status: stale 🍞'
           days-before-stale: 7
           days-before-close: 7
           debug-only: true
