feat(pictograms): add new cities and new category (#9539)
* new cities and new category August 2021

* chore(pictograms): update meta and snapshots

Co-authored-by: Andrea N. Cardona <andreancardona@gmail.com>
Co-authored-by: Josh Black <josh@josh.black>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -116,10 +116,10 @@ categories:
       - paris--notre-dame
       - paris--pompidou-center
       - peru--machu-picchu
+      - portland--building
       - prague--charles-bridge-tower
       - prague--dancing-house--01
       - prague--dancing-house--02
-      #    - portland
       - raleigh-nc
       - rio-de-janeiro
       - rome
@@ -127,6 +127,7 @@ categories:
       - san-francisco--fog
       - sao-paulo
       - seattle
+      - seoul--gyeongbokgung-palace
       #    - shanghai
       - singapore
       - stockholm
@@ -378,13 +379,6 @@ categories:
       - television
       - washer
       - wifi
-  - name: Enforcement
-    members:
-      - capitol
-      - fairness
-      - justice
-      - parliament
-      - police
   - name: File
     members:
       - add--document
@@ -422,6 +416,12 @@ categories:
       - invoice
       - optimize--cash-flow--01
       - optimize--cash-flow--02
+  - name: Government
+    members:
+      - capitol
+      - fairness
+      - justice
+      - parliament
   - name: Healthcare
     members:
       - baby--bottle
@@ -648,6 +648,12 @@ categories:
       - user
       - user--profile
       - user--search
+  - name: Public service
+    members:
+      - firefighter
+      - police
+      - social--worker
+      - teacher
   - name: Retail
     members:
       - bag
