--- a/packages/pictograms/pictograms.yml
+++ b/packages/pictograms/pictograms.yml
@@ -68,31 +68,31 @@
   aliases:
     - AI ethics
     - AI ethics principles
-- name: ai--trust
-  friendly_name: AI trust
-  aliases:
-    - AI trust
-    - trust
-- name: ai--privacy
-  friendly_name: AI privacy
-  aliases:
-    - AI privacy
-    - privacy
-- name: ai--transparency
-  friendly_name: AI transparency
-  aliases:
-    - AI transparency
-    - transparency
 - name: ai--explainability
   friendly_name: AI explainability
   aliases:
     - AI explainability
     - explainability
+- name: ai--privacy
+  friendly_name: AI privacy
+  aliases:
+    - AI privacy
+    - privacy
 - name: ai--robustness
   friendly_name: AI robustness
   aliases:
     - AI robustness
     - robustness
+- name: ai--transparency
+  friendly_name: AI transparency
+  aliases:
+    - AI transparency
+    - transparency
+- name: ai--trust
+  friendly_name: AI trust
+  aliases:
+    - AI trust
+    - trust
 - name: air--conditioner
   friendly_name: Air conditioner
   aliases:
@@ -518,15 +518,15 @@
     - consistency
     - business consistency
     - infinity
-- name: c-plus-plus--language
-  friendly_name: C++
-  aliases:
-    - c++, coding language
 - name: c--language
   friendly_name: C
   aliases:
     - c
     - coding language
+- name: c-plus-plus--language
+  friendly_name: C++
+  aliases:
+    - 'c++, coding language'
 - name: cafe
   friendly_name: Café
   aliases:
@@ -1198,16 +1198,16 @@
     - higher education
     - education
     - school
-- name: color--contrast
-  friendly_name: Color contrast
-  aliases:
-    - color contrast
 - name: colombia--cathedral-of-las-lajas
   friendly_name: Colombia Cathedral of Las Lajas
   aliases:
     - Colombia
     - Cathedral of Las Lajas
     - South America
+- name: color--contrast
+  friendly_name: Color contrast
+  aliases:
+    - color contrast
 - name: commercial--financing--01
   friendly_name: Commercial financing 01
   aliases:
@@ -1295,7 +1295,7 @@
   friendly_name: Containers and Cloud Native
   aliases:
     - cloud native
-    - container,
+    - 'container,'
     - containers
     - kubernetes
 - name: content--design
@@ -1443,6 +1443,14 @@
     - truck
     - delivery
     - manufacturing
+- name: design--leadership
+  friendly_name: Design leadership
+  aliases:
+    - Design leadership
+- name: design--research
+  friendly_name: Design research
+  aliases:
+    - Design research
 - name: design-and-development--01
   friendly_name: Design and development 01
   aliases:
@@ -1464,14 +1472,6 @@
     - enterprise design thinking team
     - people
     - team
-- name: design--leadership
-  friendly_name: Design leadership
-  aliases:
-    - Design leadership
-- name: design--research
-  friendly_name: Design research
-  aliases:
-    - Design research
 - name: desktop
   friendly_name: Desktop
   aliases:
@@ -1998,6 +1998,12 @@
     - fire extinguisher
     - fire
     - extinguisher
+- name: firefighter
+  friendly_name: Firefighter
+  aliases:
+    - firefighter
+    - public servant
+    - fire
 - name: firewall
   friendly_name: Firewall
   aliases:
@@ -2509,6 +2515,14 @@
   aliases:
     - IBM Z®
     - IBM
+- name: ibm--z--partition
+  friendly_name: IBM Z® partition
+  aliases:
+    - LPAR
+    - partition
+    - Z LPAR
+    - Z partition
+    - Z DPM mode partition
 - name: ibm--z-and-linuxone-multi-frame
   friendly_name: IBM Z® and LinuxONE multi-frame
   aliases:
@@ -2529,14 +2543,6 @@
     - Linux
     - single frame
     - IBM Z
-- name: ibm--z--partition
-  friendly_name: IBM Z® partition
-  aliases:
-    - LPAR
-    - partition
-    - Z LPAR
-    - Z partition
-    - Z DPM mode partition
 - name: id--badge
   friendly_name: ID badge
   aliases:
@@ -3546,6 +3552,11 @@
     - petri
     - life science
     - research
+- name: php--language
+  friendly_name: PHP
+  aliases:
+    - php
+    - coding language
 - name: pill--bottle--01
   friendly_name: Pill bottle 01
   aliases:
@@ -3554,11 +3565,6 @@
     - prescription
     - rx
     - healthcare
-- name: php--language
-  friendly_name: PHP
-  aliases:
-    - php
-    - coding language
 - name: pills
   friendly_name: Pills
   aliases:
@@ -3607,6 +3613,15 @@
     - data analytics
     - data
     - analytics
+- name: portland--building
+  friendly_name: Portland building
+  aliases:
+    - Portland
+    - Oregon
+    - building
+    - city
+    - cities
+    - Pacific northwest
 - name: power
   friendly_name: Power
   aliases:
@@ -4161,6 +4176,14 @@
     - select
     - range
     - multiline select
+- name: seoul--gyeongbokgung-palace
+  friendly_name: Seoul Gyeongbokgung Palace
+  aliases:
+    - Seoul
+    - Korea
+    - Asia
+    - East Asia
+    - Gyeongbokgung Palace
 - name: server--operating-systems
   friendly_name: Server operating systems
   aliases:
@@ -4275,6 +4298,12 @@
     - social work
     - health and human services
     - community service
+- name: social--worker
+  friendly_name: Social Worker
+  aliases:
+    - social worker
+    - public servant
+    - social
 - name: socks
   friendly_name: Socks
   aliases:
@@ -4657,6 +4686,14 @@
     - target
     - business
     - strategy
+- name: teacher
+  friendly_name: Teacher
+  aliases:
+    - teacher
+    - teach
+    - education
+    - school
+    - professor
 - name: team--alignment
   friendly_name: Team alignment
   aliases:
@@ -4755,6 +4792,18 @@
     - lab
     - laboratory
     - research
+- name: text--equivalent
+  friendly_name: Text equivalent
+  aliases:
+    - text equivalent
+- name: text--input
+  friendly_name: Text input
+  aliases:
+    - 'text input, user input'
+- name: text--layout
+  friendly_name: Text layout
+  aliases:
+    - text layout
 - name: text--to--speech
   friendly_name: Text to speech
   aliases:
@@ -4763,18 +4812,6 @@
     - speech
     - watson
     - AI
-- name: text--equivalent
-  friendly_name: Text equivalent
-  aliases:
-    - text equivalent
-- name: text--input
-  friendly_name: Text input
-  aliases:
-    - text input, user input
-- name: text--layout
-  friendly_name: Text layout
-  aliases:
-    - text layout
 - name: this-side-up
   friendly_name: This side up
   aliases:
@@ -5078,12 +5115,6 @@
     - unlock
     - security
     - open
-- name: uruguay--palacio-salvo
-  friendly_name: Uruguay Palacio Salvo
-  aliases:
-    - Uruguay
-    - Palacio Salvo
-    - South America
 - name: upload--01
   friendly_name: Upload 01
   aliases:
@@ -5096,6 +5127,12 @@
     - upload 02
     - upload
     - input
+- name: uruguay--palacio-salvo
+  friendly_name: Uruguay Palacio Salvo
+  aliases:
+    - Uruguay
+    - Palacio Salvo
+    - South America
 - name: user
   friendly_name: User
   aliases:
